[project]
name = "tiktok-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtts>=2.5.4",
    "httpx==0.27.2",
    "playwright>=1.46.0",
    "pydub>=0.25.1",
    "pyee<12.0.0",
    "pygame>=2.6.1",
    "tiktoklive>=5.0.8",
    "websockets>=16.0",
]
